# Stocky

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main_clases.cpp
Fondo/: Fondo.cpp
Interface/: README.md
Interface/Interface/: Interface.pro  widget.cpp  widget.h  widget.ui
Interface/untitled4/: mainwindow.ui
app/: .gitignore  CMakeLists.txt  main.cpp  main_.cpp  main_blobs.cpp
app/data/: data .txt  data.json  data2.json  data3.json
app/include/histUtils/: histUtils.hpp
app/include/perspectiveUtils/: perspectiveUtils.hpp
app/include/processingMisc/: processingMisc.hpp
app/include/shelfUtils/: shelfUtils.hpp
app/src/histUtils/: histUtils.cpp
app/src/perspectiveUtils/: perspectiveUtils.cpp
app/src/processingMisc/: drawResources.cpp  movementMask.cpp  processingMisc.cpp  scanFloorLib.cpp
app/src/shelfUtils/: .gitignore  Crate.cpp  Floor.cpp  Shelf.cpp  shelfUtils.cpp
playground/: CMakeLists.txt  histogram_analysis.cpp  histograma_columnas.cpp
playground/luciano/: CMakeLists.txt  contornos1.cpp  histograma_columnas.cpp  main_crates.cpp  main_estructuras.cpp  main_final.cpp  main_histos.cpp  main_imagen.cpp  main_json.cpp  main_move_mask.cpp  main_slidind_window.cpp  main_test_mask.cpp  main_video.cpp  perspective_transform.cpp  pruebas_Segmentacion.cpp  sobel_demo.cpp  superpix_sopin.cpp
playground/tomas/: CMakeLists.txt  compareHists.cpp  histogram_analysis.cpp  product.cpp
playground/tomas/analysis/: hist_analysis.ipynb  means_analysis.ipynb  utils.py
playground/tomas/analysis/csv/: distance.csv  distance_diff.csv  frosties.csv  meanstd.csv  meanstd_diff.csv
samples/videos/: .gitignore
src/: floorFunctions.cpp  floorFunctions.hpp
